--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -11,12 +11,12 @@
     "    - [Operatore \\*](#Operatore-*)\n",
     "    - [Argomenti opzionali](#Argomenti-opzionali)\n",
     "    - [Ordine delle chiamate](#Ordine-delle-chiamate)\n",
+    "    - [Valore di ritorno](#Valore-di-ritorno)\n",
     "    - [*Esercizio 1*](#Esercizio-1)\n",
     "    - [*Esercizio 2*](#Esercizio-2)\n",
-    "    - [*Esercizio 3*](#Esercizio-3)\n",
-    "    - [Valore di ritorno](#Valore-di-ritorno)\n",
-    "        - [*Esercizio 4*](#Esercizio-4)\n",
-    "        - [*Esercizio 5*](#Esercizio-5)"
+    "    - [*Esercizio 3*](#Esercizio-3)    \n",
+    "    - [*Esercizio 4*](#Esercizio-4)\n",
+    "    - [*Esercizio 5*](#Esercizio-5)"
    ]
   },
   {
@@ -313,6 +313,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Valore di ritorno\n",
+    "---\n",
+    "Oltre ad eseguire delle azioni, una funzione può restituire uno o più valori attraverso la keyword *return*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eseguo e restituisco il prodotto di 10 e 5.\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def product(a, b):\n",
+    "    print(f'Eseguo e restituisco il prodotto di {a} e {b}.')\n",
+    "    c = a*b\n",
+    "    return c\n",
+    "\n",
+    "print(product(10, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Esercizio 1*\n",
     "---\n",
     "- costruire un database di utenti specificandone l'età e altri campi a piacere\n",
@@ -443,39 +475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Valore di ritorno\n",
+    "*Esercizio 4*\n",
     "---\n",
-    "Oltre ad eseguire delle azioni, una funzione può restituire uno o più valori attraverso la keyword *return*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eseguo e restituisco il prodotto di 10 e 5.\n",
-      "50\n"
-     ]
-    }
-   ],
-   "source": [
-    "def product(a, b):\n",
-    "    print(f'Eseguo e restituisco il prodotto di {a} e {b}.')\n",
-    "    c = a*b\n",
-    "    return c\n",
-    "\n",
-    "print(product(10, 5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### *Esercizio 4*\n",
     "Immaginiamo di dover riempire il database di utenti da zero. Scrivere una funzione che, presi in ingresso un nuovo utente e il database,\n",
     "\n",
     "- stampa le informazioni dell'utente, usando show_user_info\n",
@@ -505,9 +506,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 5*\n",
+    "*Esercizio 5*\n",
+    "---\n",
     "\n",
-    "Ripetere l'Esercizio 3, ma utilizzando una funzione esterna per controllare se un utente è maggiorenne."
+    "Ripetere l'Esercizio 4, ma utilizzando una funzione esterna per controllare se un utente è maggiorenne."
    ]
   },
   {
