modifica a lezione 2 su comprensione liste

--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1528,37 +1528,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'Francesco'), (1, 'Elisa'), (2, 'Alessandro'), (3, 'Giovanni'), (4, 'Maria Teresa')]\n"
+      "[[0, 'Francesco'], [1, 'Elisa'], [2, 'Alessandro'], [3, 'Giovanni'], [4, 'Maria Teresa']]\n"
      ]
     }
    ],
    "source": [
-    "indexed_names = [(i, n.title()) for i, n in enumerate(names)]\n",
+    "indexed_names = [[i, n.title()] for i, n in enumerate(names)]\n",
     "print(indexed_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'Alessandro'), (1, 'Elisa'), (2, 'Francesco'), (3, 'Giovanni'), (4, 'Maria Teresa')]\n"
+      "[[0, 'Alessandro'], [1, 'Elisa'], [2, 'Francesco'], [3, 'Giovanni'], [4, 'Maria Teresa']]\n"
      ]
     }
    ],
    "source": [
-    "sorted_indexed_names = [(i, n.title()) for i, n in enumerate(sorted(names))]\n",
+    "sorted_indexed_names = [[i, n.title()] for i, n in enumerate(sorted(names))]\n",
     "print(sorted_indexed_names)"
    ]
   },
