modifica a lezione 4 su test logici

--- a/4. If, valori e operatori booleani.ipynb
+++ b/4. If, valori e operatori booleani.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -550,13 +550,13 @@
     }
    ],
    "source": [
-    "a = 10\n",
-    "print(not type(a) == str)"
+    "number = 10\n",
+    "print(not type(number) == str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -572,10 +572,10 @@
    ],
    "source": [
     "number = 5\n",
-    "print(a > 2)\n",
-    "print(not a > 2)\n",
-    "print(not not a > 2)\n",
-    "print(not not not a > 2)"
+    "print(number > 2)\n",
+    "print(not number > 2)\n",
+    "print(not not number > 2)\n",
+    "print(not not not number > 2)"
    ]
   },
   {
