modifica a lezione 5 su nome funzione

--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -256,10 +256,10 @@
     }
    ],
    "source": [
-    "def show_user_info(user_info, email='not available'):\n",
-    "    print('\\nNome:', user_info['name'])\n",
-    "    print('Età:', user_info['age'])\n",
-    "    print('Sesso:', user_info['gender'])\n",
+    "def show_user_info(user, email='not available'):\n",
+    "    print('\\nNome:', user['name'])\n",
+    "    print('Età:', user['age'])\n",
+    "    print('Sesso:', user['gender'])\n",
     "    print('Email:', email)\n",
     "    \n",
     "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
