modifica a lezione 6 su operazioni aggregate

--- a/6. Calcolo vettoriale: NumPy.ipynb
+++ b/6. Calcolo vettoriale: NumPy.ipynb
@@ -1310,22 +1310,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.5239337   0.67881565 -1.03109723 -1.24378488  0.45888053 -1.906291\n",
-      " -0.18304781  0.27400857 -0.95418922 -0.74913671  0.68795046 -0.17565807\n",
-      " -0.36587666 -0.67793002  0.21441653 -0.99815799  0.30547323 -0.35660063\n",
-      " -0.05085729  1.07786975  1.48730769  0.99277908 -2.69627749  1.44949629\n",
-      " -0.72733603 -1.32755482  0.90917688  3.5501803   0.52889757 -0.3350686\n",
-      " -2.57636504 -0.50873792  0.46394118 -0.14893769  0.08950097 -0.95685826\n",
-      "  0.7759506   0.60875544  1.26859442  0.52559775 -1.03605765  0.40669908\n",
-      " -0.92934192  1.89778362 -0.38114844 -1.09829355  0.77636936  0.43547496\n",
-      "  0.16876428  1.22945347]\n",
+      "[ 0.1511195   0.02246881  0.16215925 -0.23918109 -0.98491838  0.02613448\n",
+      " -1.1331936  -0.09452811 -1.35547376  0.39169004  0.30212612 -0.9585116\n",
+      "  1.35419398  1.51082997 -0.66330481  1.66790337  0.20055298  0.59891854\n",
+      " -1.7778374   0.18379394  1.29218511  0.65423892  2.42808086  0.03700428\n",
+      "  0.69296644 -1.17507294 -0.48006005  0.89841244  0.55987709 -0.37872409\n",
+      " -0.51026435  0.12037012 -0.07803833 -0.68254976  0.55922546 -0.87951559\n",
+      " -0.42525602 -1.15126191  1.34632396  0.95999759  0.69955278 -2.44134706\n",
+      "  1.11952732 -0.66956959 -0.38433463 -1.24502767  2.01390745 -1.04640911\n",
+      "  0.77721393 -0.91506526]\n",
       "(50,)\n"
      ]
     }
@@ -1333,26 +1333,26 @@
    "source": [
     "import numpy.random as rdm\n",
     "\n",
-    "A = rdm.normal(0, 1, (50,))\n",
-    "print(A)\n",
-    "print(A.shape)"
+    "a = rdm.normal(0, 1, (50,))\n",
+    "print(a)\n",
+    "print(a.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3714664430426071\n"
+      "1.061329633536524\n"
      ]
     }
    ],
    "source": [
-    "print(np.sum(A))"
+    "print(np.sum(a))"
    ]
   },
   {
@@ -1364,36 +1364,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.371466443042608\n"
+      "1.0613296335365232\n"
      ]
     }
    ],
    "source": [
-    "print(sum(A))"
+    "print(sum(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-8.881784197001252e-16\n"
+      "8.881784197001252e-16\n"
      ]
     }
    ],
    "source": [
-    "print(np.sum(A) - sum(A))"
+    "print(np.sum(a) - sum(a))"
    ]
   },
   {
@@ -1411,21 +1411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.81 µs ± 74.7 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "2.16 µs ± 74 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "3.43 µs ± 74.2 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "1.99 µs ± 37.5 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit sum(A)\n",
-    "%timeit np.sum(A)"
+    "%timeit sum(a)\n",
+    "%timeit np.sum(a)"
    ]
   },
   {
