--- a/7. Machine learning: Scikit-learn.ipynb
+++ b/7. Machine learning: Scikit-learn.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
    ],
    "source": [
     "best_model = KCV(KNN(),\n",
-    "                 param_grid=[{'n_neighbors' : [1,2,3,5,10,20]}],\n",
+    "                 [{'n_neighbors' : [1,2,3,5,10,20]}],\n",
     "                 cv=5).fit(X_train, y_train).best_estimator_\n",
     "\n",
     "print('Validated value for k:', best_model.n_neighbors)"
