--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -442,26 +442,7 @@
    "source": [
     "Ordinamento\n",
     "---\n",
-    "Una lista può essere ordinata attraverso la funzione *sort* (del tipo lista) o *sorted* (built-in). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista. Nel caso delle stringhe, l'ordinamento sarà alfabetico."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['circle', 'hexagon', 'square', 'triangle']\n"
-     ]
-    }
-   ],
-   "source": [
-    "shapes = ['triangle', 'square', 'circle', 'hexagon']\n",
-    "shapes.sort()#sort è 'in-place'\n",
-    "print(shapes)"
+    "Una lista può essere ordinata attraverso la funzione *sorted* (built-in) o *sort* (del tipo lista). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista. Nel caso delle stringhe, l'ordinamento sarà alfabetico."
    ]
   },
   {
@@ -481,6 +462,25 @@
     "shapes = ['triangle', 'square', 'circle', 'hexagon']\n",
     "sorted_shapes = sorted(shapes)#sorted crea un'altra lista\n",
     "print(sorted_shapes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['circle', 'hexagon', 'square', 'triangle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "shapes = ['triangle', 'square', 'circle', 'hexagon']\n",
+    "shapes.sort()#sort è 'in-place'\n",
+    "print(shapes)"
    ]
   },
   {
@@ -1615,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
