--- a/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
+++ b/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../data/train.csv', header=0, index_col='PassengerId')\n",
-    "df_test = pd.read_csv('../data/test.csv', header=0, index_col='PassengerId')"
+    "df_train = pd.read_csv('projects/titanic/data/train.csv', header=0, index_col='PassengerId')\n",
+    "df_test = pd.read_csv('projects/titanic/data/test.csv', header=0, index_col='PassengerId')"
    ]
   },
   {
@@ -4217,7 +4217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
