aggiornate prime 6 lezioni

--- a/4. Condizioni, valori e operatori booleani.ipynb
+++ b/4. Condizioni, valori e operatori booleani.ipynb
@@ -10,10 +10,9 @@
     "    - [*if*](#if)\n",
     "    - [*else*](#else)\n",
     "    - [*elif*](#elif)\n",
-    "    - [*switch* e *case*](#switch-e-case)\n",
     "- [if e comprensioni di liste](#if-e-comprensioni-di-liste)\n",
-    "- [Assegnazione condizionata](#Assegnazione-condizionata)\n",
     "- [Test logici](#Test-logici)\n",
+    "- [Operatori booleani](#Operatori-booleani)\n",
     "- [*Esercizio 1*](#Esercizio-1)\n",
     "- [*Esercizio 2*](#Esercizio-2)"
    ]
@@ -51,7 +50,7 @@
    "source": [
     "number = 8\n",
     "\n",
-    "if number % 2 == 0:#'%' è l'operatore 'modulo'\n",
+    "if number % 2 == 0:#'%' è l'operatore 'modulo', il resto della divisione per un intero\n",
     "    print(number, 'è un numero pari')"
    ]
   },
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,28 +135,25 @@
     "mixed_list = ['ciao', 5, 4.7, 'mamma', [4,5,6]]\n",
     "\n",
     "for element in mixed_list:\n",
-    "    if type(element) == str : print(element, 'è di tipo stringa')#corpo dell'azione in una sola riga\n",
-    "    elif type(element) == int : print(element, 'è di tipo intero')\n",
-    "    elif type(element) == list : print(element, 'è di tipo list')\n",
-    "    else : print(element, 'non è né stringa, né intero, né lista!')"
+    "    \n",
+    "    if type(element) == str:\n",
+    "        print(element, 'è di tipo stringa')#corpo dell'azione in una sola riga\n",
+    "        \n",
+    "    elif type(element) == int:\n",
+    "        print(element, 'è di tipo intero')\n",
+    "        \n",
+    "    elif type(element) == list:\n",
+    "        print(element, 'è di tipo list')\n",
+    "        \n",
+    "    else:\n",
+    "        print(element, 'non è né stringa, né intero, né lista!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nel costrutto if-elif-else si può usare un solo else, che verrà eseguito quando tutte le altre condizioni (testate da if ed elif) falliranno. Se una della condizioni testate si verifica, quelle successive vengono ignorate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*switch* e *case*\n",
-    "---\n",
-    "Chi ha già programmato con altri linguaggi sa che per verificare una serie di condizioni e associarvi l'azione corrispondente si usano costrutti come *switch* o *case*.\n",
-    "\n",
-    "Python non prevede nessuna di queste keyword: https://docs.python.org/3/faq/design.html#why-isn-t-there-a-switch-or-case-statement-in-python."
+    "Nel costrutto if-elif-else si può usare un solo else, che viene eseguito solo quando tutte le altre condizioni (testate da if ed elif) falliscono. Se una della condizioni testate si verifica, quelle successive vengono ignorate."
    ]
   },
   {
@@ -166,35 +162,7 @@
    "source": [
     "if e comprensioni di liste\n",
     "===\n",
-    "Il test di una condizione è particolarmente comodo quando si vuole derivare una lista da una nota attraverso una comprensione."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['ciao', 'mamma']\n"
-     ]
-    }
-   ],
-   "source": [
-    "mixed_list = ['ciao', 5, 4.7, 'mamma', [4,5,6]]\n",
-    "strings = [element for element in mixed_list if type(element) == str]\n",
-    "print(strings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Assegnazione condizionata\n",
-    "===\n",
-    "Si può assegnare un valore ad una variabile dipendentemente dal valore di un'altra in una sola riga di codice."
+    "Il test di una condizione è particolarmente comodo quando si vuole derivare una lista da un'altra attraverso una comprensione."
    ]
   },
   {
@@ -203,18 +171,42 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['ciao', 5, 4.7, 'mamma', [4, 5, 6]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 5\n",
-    "b = 7\n",
-    "c = a if a>5 else b\n",
-    "print(c)"
+    "mixed_list = ['ciao', 5, 4.7, 'mamma', [4,5,6]]\n",
+    "\n",
+    "[x for x in mixed_list]#lista derivata da (e uguale ad) una di partenza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ciao', 'mamma']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strings_only = [x for x in mixed_list if type(x) == str]#solo le stringhe!\n",
+    "\n",
+    "strings_only"
    ]
   },
   {
@@ -223,115 +215,7 @@
    "source": [
     "Test logici\n",
     "===\n",
-    "Le condizioni testate da if ed elif sono vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo alcune condizioni booleane."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 5\n",
-    "b = 7\n",
-    "print(type(a == b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a == b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(a == b) == False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = 5\n",
-    "print(a >= c)"
+    "Le condizioni testate da if ed elif sono vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo alcuni esempi."
    ]
   },
   {
@@ -340,15 +224,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(a > c)"
+    "a = 5\n",
+    "b = 7\n",
+    "\n",
+    "a == b#test di uguaglianza"
    ]
   },
   {
@@ -357,15 +247,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(a != b)#'diverso da'"
+    "type(a == b)"
    ]
   },
   {
@@ -374,16 +267,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lst = [3,6,2,10]\n",
-    "print(3 in lst)#test di inclusione"
+    "type(True)"
    ]
   },
   {
@@ -392,15 +287,122 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(7 in lst)"
+    "type(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = 5\n",
+    "\n",
+    "a >= c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a > c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a != b#'diverso da' (test di non uguaglianza)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [3,6,2,10]\n",
+    "\n",
+    "3 in lst#test di inclusione"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7 in lst"
    ]
   },
   {
@@ -416,56 +418,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "number = 7\n",
-    "print(number > 5 and number < 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "number = 4\n",
-    "print(number > 5 and number < 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 7\n",
+    "\n",
+    "number > 5 and number < 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 4\n",
+    "\n",
+    "number > 5 and number < 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "number = 12\n",
-    "print(number > 5 and number < 10)"
+    "\n",
+    "number > 5 and number < 10"
    ]
   },
   {
@@ -477,56 +491,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "number = 4\n",
-    "print(number > 5 or number % 2 == 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "number = 33\n",
-    "print(number > 5 or number % 2 == 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 4\n",
+    "\n",
+    "number > 5 or number % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 33\n",
+    "\n",
+    "number > 5 or number % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "number = 3\n",
-    "print(number > 5 or number % 2 == 0)"
+    "\n",
+    "number > 5 or number % 2 == 0"
    ]
   },
   {
@@ -538,25 +564,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "number = 10\n",
-    "print(not type(number) == str)"
+    "\n",
+    "not type(number) == str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -575,25 +605,102 @@
     "print(number > 2)\n",
     "print(not number > 2)\n",
     "print(not not number > 2)\n",
-    "print(not not not number > 2)"
+    "print(not not not number > 2)\n",
+    "#..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 5\n",
+    "number < 10 and not number % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Booleani e interi\n",
+    "==="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per Python, gli interi 0 e 1 hanno anche significato booleano: indicano rispettivamente False e True."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Ciao!\n"
      ]
     }
    ],
    "source": [
-    "number = 5\n",
-    "print(number < 10 and not number % 2 == 0)"
+    "if 1:\n",
+    "    print('Ciao!')"
    ]
   },
   {
@@ -645,7 +752,7 @@
     "A partire dalla lista di numeri dell'esercizio precedente,\n",
     "- derivare la lista dei quadrati che sono multipli di 2\n",
     "- derivare la lista dei quadrati che sono multipli di 3\n",
-    "- derivare la lista dei quadrati che sono multipli di 2 ma non di 3"
+    "- derivare la lista dei quadrati che sono multipli di 2 e non di 3"
    ]
   },
   {
@@ -694,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
