--- a/3. Liste, cicli e comprensioni.ipynb
+++ b/3. Liste, cicli e comprensioni.ipynb
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "['circle', 'hexagon', 'square', 'triangle']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,45 +516,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lista ordinata: ['circle', 'hexagon', 'square', 'triangle']\n",
+      "lista ordinata: ['circle', 'hexagon', 'square', 'triangle']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_shapes = sorted(shapes)#assegno risultato ad una variabile\n",
+    "print('lista ordinata:', sorted_shapes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "lista ordinata: ['rhombus', 'hexagon', 'square', 'triangle']\n"
      ]
     }
    ],
    "source": [
-    "shapes = ['triangle', 'square', 'circle', 'hexagon']\n",
-    "sorted_shapes = sorted(shapes)#assegno risultato ad una variabile\n",
-    "print('lista ordinata:', sorted_shapes)\n",
-    "\n",
     "sorted_shapes[0] = 'rhombus'#modifica\n",
     "print('lista ordinata:', sorted_shapes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['triangle', 'square', 'circle', 'hexagon']"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lista originale: ['triangle', 'square', 'circle', 'hexagon']\n"
+     ]
     }
    ],
    "source": [
-    "print('lista originale:', sorted_shapes)"
+    "print('lista originale:', shapes)"
    ]
   },
   {
