aggiunti esercizi lezione 7

--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -20,8 +20,11 @@
     "        - [*Esercizio 3*](#Esercizio-3)        \n",
     "    - [Model selection](#Model-selection)\n",
     "        - [*Esercizio 4*](#Esercizio-4)\n",
+    "        - [*Esercizio 5*](#Esercizio-5)\n",
     "    - [Alberi di decisione](#Alberi-di-decisione)\n",
-    "        - [*Esercizio 5*](#Esercizio-5)"
+    "        - [*Esercizio 6*](#Esercizio-6)\n",
+    "        - [*Esercizio 7*](#Esercizio-7)\n",
+    "    - [*Esercizio 8*](#Esercizio-8)"
    ]
   },
   {
@@ -1069,8 +1072,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Esercizio 8*\n",
-    "\n",
+    "*Esercizio 8*\n",
+    "---\n",
     "Ripetere quanto visto finora lavorando sul dataset *digits*."
    ]
   },
